fixed spacing

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -7,6 +7,20 @@
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
 }
 
+.hero{
+  display: grid;
+  place-items: center;
+  height: calc(100% - 8rem)
+}
+
+.contentWrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+}
+
 .heading{
   color: #fff;
   max-width: 75%;
@@ -24,16 +38,17 @@
   font-size: 20px;
   margin: 0 auto;
   line-height: 125%;
+  margin-top: 12px;
 }
 
 .cta{
-  margin-top: 64px;
+  margin-top: 16px;
   display: inline-block;
 }
 
 .cta button{
   background: #fbfc43;
-  padding: 16px 24px;
+  padding: 12px 24px;
   color: #1b1c1f;
   outline: none;
   border: none;
